# fmod-oxide

./: .gitignore  COVERAGE.md  Cargo.toml  FMOD_LICENSE.txt  README.md
.cargo/: config.toml
fmod-examples/: Cargo.toml
fmod-examples/examples/: net_stream.rs
fmod-oxide/: Cargo.toml
fmod-oxide/examples/: event_parameter.rs  music_callbacks._rs  music_callbacks.rs  programmer_sound._rs  programmer_sound.rs  recording_playback.rs  testing.rs
fmod-oxide/src/: lib.rs  userdata.rs
fmod-oxide/src/core/: channel.rs  channel_control.rs  channel_group.rs  debug.rs  dsp.rs  dsp_connection.rs  enums.rs  file.rs  flags.rs  geometry.rs  helpers.rs  memory.rs  mod.rs  reverb_3d.rs  reverb_presets.rs  sound.rs  sound_group.rs  structs.rs  system.rs  thread.rs
fmod-oxide/src/core/channel/: information.rs  mod.rs  playback_control.rs
fmod-oxide/src/core/channel_control/: callback.rs  dsp.rs  filtering.rs  general.rs  mod.rs  panning.rs  playback.rs  scheduling.rs  spatialization.rs  volume.rs
fmod-oxide/src/core/channel_group/: channel_management.rs  general.rs  group_management.rs  mod.rs
fmod-oxide/src/core/dsp/: callback.rs  channel_format.rs  connections.rs  general.rs  metering.rs  mod.rs  parameters.rs  processing.rs
fmod-oxide/src/core/dsp_connection/: general.rs  mix_properties.rs  mod.rs
fmod-oxide/src/core/geometry/: general.rs  mod.rs  polygons.rs  spatialization.rs
fmod-oxide/src/core/sound/: data_reading.rs  defaults.rs  general.rs  information.rs  mod.rs  music.rs  relationship.rs  synchronization.rs
fmod-oxide/src/core/sound_group/: general.rs  group.rs  mod.rs  sound.rs
fmod-oxide/src/core/system/: builder.rs  callback.rs  creation.rs  device_selection.rs  filesystem.rs  general.rs  geometry.rs  information.rs  lifetime.rs  mod.rs  network.rs  plugin.rs  recording.rs  runtime_control.rs  setup.rs
fmod-oxide/src/studio/: bank.rs  bus.rs  enums.rs  flags.rs  mod.rs  structs.rs  vca.rs
fmod-oxide/src/studio/bank/: general.rs  loading.rs  lookups.rs  mod.rs
fmod-oxide/src/studio/command_replay/: callback.rs  general.rs  mod.rs  playback.rs  query.rs
fmod-oxide/src/studio/event/: instance.rs
fmod-oxide/src/studio/event_description/: attributes.rs  callback.rs  general.rs  instance.rs  mod.rs  parameter.rs  sample_data.rs  user_property.rs
fmod-oxide/src/studio/event_instance/: attributes_3d.rs  callback.rs  core.rs  general.rs  mod.rs  parameters.rs  playback.rs  playback_properties.rs  profiling.rs
fmod-oxide/src/studio/system/: bank.rs  builder.rs  callback.rs  command_replay.rs  general.rs  lifecycle.rs  listener.rs  misc.rs  mod.rs  parameter.rs  plugins.rs  profiling.rs
fmod-rs/: Cargo.toml
fmod-rs/examples/: 3d.rs  3d_multi.rs  event_parameter.rs  music_callbacks.rs  objectpan.rs  programmer_sound.rs  recording_playback.rs  simple_event.rs  testing.rs
fmod-rs/src/: common.rs  lib.rs  result.rs  userdata.rs  utf8_cstr.rs  utf8_cstring.rs
fmod-rs/src/core/: channel_group.rs  dsp.rs  enums.rs  flags.rs  geometry.rs  mod.rs  reverb_3d.rs  sound.rs  sound_group.rs  structs.rs  system.rs
fmod-rs/src/studio/: bank.rs  bus.rs  command_replay.rs  enums.rs  event_description.rs  event_instance.rs  flags.rs  mod.rs  structs.rs  system.rs  vca.rs
fmod-rs/src/studio/command_replay/: mod.rs  userdata.rs
fmod-rs/src/studio/event/: description.rs  instance.rs  mod.rs
fmod-rs/tests/: common_structs.rs  events.rs  lifecycle.rs
fmod-studio-examples/: Cargo.toml
fmod-studio-examples/examples/: 3d.rs  3d_multi.rs  event_parameter.rs  music_callbacks.rs  objectpan.rs  programmer_sound.rs  recording_playback.rs  simple_event.rs  testing.rs
fmod-sys/: Cargo.toml  README.md  build.rs
fmod-sys/src/: channel_control.cpp  channel_control.h  lib.rs  wrapper.h
lanyard/: Cargo.toml  README.md
lanyard/src/: cstr.rs  cstring.rs  lib.rs
utf8-cstr/: Cargo.toml  README.md
utf8-cstr/src/: cstr.rs  cstring.rs  lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/coverage/: collect_c_functions.rs  mark_rust_functions.rs  mod.rs
