[package]
name = "fmod-oxide"
version = "2.2.0-pre.1"
edition = "2021"
license = "MPL-2.0"
description = "Zero cost bindings to FMOD and FMOD Studio"
repository = "https://github.com/Speak2Erase/fmod-oxide"
keywords = ["gamedev", "audio", "sound", "fmod"]
categories = ["ffi", "api-bindings", "game-development", "multimedia::audio"]
readme = "../README.md"

[lib]
name = "fmod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.2"
fmod-audio-sys = { version = "2.2.*", path = "../fmod-sys" }
lanyard = { version = "0.1.0", path = "../lanyard/" }
num_enum = "0.7.2"

once_cell = { version = "1.19", optional = true }
slotmap = { version = "1.0.7", optional = true }

[dev-dependencies]
once_cell = "1.19"

[features]
userdata-abstraction = ["once_cell", "slotmap"]
default = ["userdata-abstraction"]
