[package]
name = "fmod-rs"
version = "2.2.20"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.2"
fmod-sys = { version = "2.2.20", path = "../fmod-sys" }

[dev-dependencies]
once_cell = "1.19"
rstest = "0.18.2"

[features]
safe-userdata = []
default = ["safe-userdata"]
