[package]
name = "fmod-rs"
version = "2.2.20"
edition = "2021"

[lib]
name = "fmod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.2"
fmod-sys = { version = "2.2.20", path = "../fmod-sys" }

[dev-dependencies]
once_cell = "1.19"
rstest = "0.18.2"

[target.'cfg(target_os = "linux")'.dev-dependencies]
crossterm = "0.27.0"

[features]
safe-userdata = []
default = ["safe-userdata"]
