[package]
name = "fmod-rs"
version = "2.2.20"
edition = "2021"

[lib]
name = "fmod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.2"
fmod-sys = { version = "2.2.20", path = "../fmod-sys" }
lanyard = { version = "0.1.0", path = "../lanyard/" }

[dev-dependencies]
once_cell = "1.19"

[target.'cfg(target_os = "linux")'.dev-dependencies]
crossterm = "0.27.0"

[features]
safe-userdata = []
default = ["safe-userdata"]
