[package]
name = "fmod-audio-sys"
version = "2.220.2"
edition = "2021"
license = "MPL-2.0"
description = "ffi bindings to FMOD and FMOD Studio"
repository = "https://github.com/Speak2Erase/fmod-oxide"
keywords = ["gamedev", "audio", "sound", "fmod"]
categories = ["ffi", "api-bindings", "game-development", "multimedia::audio"]
readme = "README.md"

build = "build.rs"

include = ["docs/documentation.rs", "src/*", "build.rs"]

[lib]
name = "fmod_sys"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.7.2"

[build-dependencies]
bindgen = "0.69.2"
cc = "1.0"

[features]
force-debug = []
force-docs-bindings = []

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu" # crate is published from this platform
targets = []

features = ["force-docs-bindings"]
