[package]
name = "lanyard"
version = "0.1.0"
edition = "2021"
authors = ["Melody Madeline Lyons <melody@nowaffles.com>"]
license = "MPL-2.0"
keywords = ["ffi", "cstr", "cstring", "string"]
categories = ["data-structures"]
readme = "README.md"
description = "UTF-8 C string types"

[dependencies]

[features]
alloc = []
std = ["alloc"]

default = ["alloc"]
