[package]
name = "utf8-cstr"
version = "0.1.0"
edition = "2021"
authors = ["Melody Madeline Lyons <melody@nowaffles.com>"]
license = "MPLv2"
keywords = ["ffi", "cstr", "cstring", "string"]
categories = ["data-structures"]
readme = "README.md"

[dependencies]

[features]
alloc = []
std = ["alloc"]

default = ["alloc"]
