[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
walkdir = "2.5.0"
clap = { version = "4.5.4", features = ["derive"] }
clang = "2.0.0"
color-eyre = "0.6.3"
syn = { version = "2.0.63", features = ["full"] }
itertools = "0.12.1"
indexmap = "2.2.6"
regex = "1.10.4"
